--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,13 +10,13 @@ body {
   background: #02010a;
 }
 
-.contenedor {
+.contenido {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   margin: auto;
   max-width: 1000px;
-  width: 95%;
+  width: 100%;
 }
 
 header {
@@ -54,4 +54,45 @@ header nav a {
   padding: 5px;
 
   flex-grow: 1;
+}
+
+.main {
+
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+section img {
+  align-content: center;
+  width: 100%;
+
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+#imagencentral {
+  background: #82c3a6;
+  padding: 10px 40px;
+}
+
+#imagensecundaria {
+  background: #d5c75f;
+  border: 1px;
+  padding: 10px 40px;
+
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.izquierda {
+  margin-right: 15px;
+}
+
+.derecha {
+  margin-left: 15px;
+}
+
+img {
+  box-shadow: 0px 2px 2px 0px #02010a;
 }
