--- a/css/estilos.css
+++ b/css/estilos.css
@@ -118,3 +118,43 @@ section img {
 img {
   box-shadow: 0px 2px 2px 0px #02010a;
 }
+
+footer {
+  background: #C6d5c5;
+  border-radius: 0px 0px 10px 10px;
+  width: 100%;
+  padding: 20px;
+
+  /*Flex*/
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+footer div {
+  margin: 5px 10px;
+
+  display: flex;
+  flex-grow: 1;
+}
+
+footer ul li {
+  list-style: none;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  font-weight: bolder;
+  text-shadow: 0.8px 0.8px #FFF;
+}
+
+.linknav {
+  text-decoration: none;
+  color: #fff;
+}
+
+.linknav:hover {
+  text-decoration: underline;
+}
+
+.link {
+  text-decoration: none;
+  color: #000;
+}
